[gd_scene load_steps=12 format=3 uid="uid://dn56hcbavqube"]

[ext_resource type="Script" path="res://scenes/UI_scenes/lobby_menu/multiplayer_lobby.gd" id="1_84gg5"]
[ext_resource type="Theme" uid="uid://yqhtqr76mkc3" path="res://Default.tres" id="1_soco6"]
[ext_resource type="Script" path="res://scenes/UI_scenes/lobby_menu/Control.gd" id="2_oo1ne"]
[ext_resource type="Texture2D" uid="uid://cinytmjy2vwdc" path="res://assets/objects/menu_bg.png" id="2_rf78t"]
[ext_resource type="Script" path="res://scenes/UI_scenes/main_menu/background.gd" id="3_31rjn"]
[ext_resource type="PackedScene" uid="uid://borv4gmcqi7gd" path="res://scenes/UI_scenes/lobby_menu/server_info.tscn" id="3_q8aqm"]
[ext_resource type="Texture2D" uid="uid://civeu04wwwkx8" path="res://assets/objects/ui/male.png" id="7_c3rct"]
[ext_resource type="Texture2D" uid="uid://cop6w5ml78oji" path="res://assets/objects/ui/back.png" id="7_vsy7f"]
[ext_resource type="Texture2D" uid="uid://cmkw43csov3uj" path="res://assets/objects/ui/female.png" id="8_qei47"]

[sub_resource type="LabelSettings" id="LabelSettings_uopm1"]

[sub_resource type="ButtonGroup" id="ButtonGroup_jywwx"]

[node name="multiplayer_lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_soco6")
script = ExtResource("1_84gg5")

[node name="MenuBg" type="Sprite2D" parent="."]
modulate = Color(0.176471, 0.176471, 0.176471, 1)
show_behind_parent = true
texture_filter = 2
position = Vector2(576, 324)
scale = Vector2(0.601042, 0.601852)
texture = ExtResource("2_rf78t")
script = ExtResource("3_31rjn")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 150.0
offset_right = 275.0
offset_bottom = 202.0
theme = ExtResource("1_soco6")
text = "Host"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 150.0
offset_right = 466.0
offset_bottom = 202.0
theme = ExtResource("1_soco6")
text = "Join"

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 829.0
offset_top = 96.0
offset_right = 1023.0
offset_bottom = 200.0
theme = ExtResource("1_soco6")
text = "Start
GAME"

[node name="username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 95.0
offset_right = 466.0
offset_bottom = 126.0
placeholder_text = "Player"

[node name="name text" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 69.0
offset_right = 222.0
offset_bottom = 95.0
text = "Username:"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 184.0
offset_bottom = 96.0
script = ExtResource("2_oo1ne")
serverInfo = ExtResource("3_q8aqm")

[node name="BroadcastTimer" type="Timer" parent="Control"]
wait_time = 0.5

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 830.0
offset_top = 9.0
offset_right = 1142.0
offset_bottom = 65.0
label_settings = SubResource("LabelSettings_uopm1")
horizontal_alignment = 2
autowrap_mode = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 128.0
offset_top = 223.0
offset_right = 1024.0
offset_bottom = 608.0
theme = ExtResource("1_soco6")

[node name="Titles" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 880.0
offset_bottom = 40.0

[node name="IP" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Name"

[node name="name" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP Address"

[node name="PlayerCount" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
text = "Players"

[node name="Join" type="Label" parent="Control/Panel/Titles"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 880.0
offset_bottom = 367.0

[node name="ipadd" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 623.0
offset_right = 253.0
offset_bottom = 711.0
text = "Ip"

[node name="male" type="Button" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 84.0
offset_right = 553.0
offset_bottom = 134.0
theme = ExtResource("1_soco6")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_jywwx")
icon = ExtResource("7_c3rct")
icon_alignment = 1
expand_icon = true

[node name="female" type="Button" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 151.0
offset_right = 553.0
offset_bottom = 201.0
theme = ExtResource("1_soco6")
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
button_group = SubResource("ButtonGroup_jywwx")
icon = ExtResource("8_qei47")
icon_alignment = 1
expand_icon = true

[node name="back" type="Button" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 59.0
offset_bottom = 64.0
theme = ExtResource("1_soco6")
icon = ExtResource("7_vsy7f")
icon_alignment = 1
expand_icon = true

[connection signal="button_down" from="host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
[connection signal="timeout" from="Control/BroadcastTimer" to="Control" method="_on_broadcast_timer_timeout"]
[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
